# darknet

./: CMakeLists.txt
cfg/: voc.data  yolov4.cfg
data/: train.txt
include/: darknet.hpp
src/: activations.cpp  activations.hpp  batchnorm_layer.cpp  batchnorm_layer.hpp  blas.cpp  blas.hpp  box.cpp  box.hpp  col2im.cpp  col2im.hpp  convolutional_layer.cpp  convolutional_layer.hpp  darknet.cpp  data.cpp  data.hpp  detector.cpp  gemm.cpp  gemm.hpp  im2col.cpp  im2col.hpp  image.cpp  image.hpp  image_opencv.cpp  image_opencv.hpp  layer.cpp  layer.hpp  matrix.cpp  matrix.hpp  maxpool_layer.cpp  maxpool_layer.hpp  network.cpp  network.hpp  nightmare.cpp  option_list.cpp  option_list.hpp  parser.cpp  parser.hpp  route_layer.cpp  route_layer.hpp  shortcut_layer.cpp  (+7 more)
